--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>ISO Game Archive W.I.P</h1>
+    <p><a href="https://ko-fi.com/arnon001">Want to donate the developer?</a></p>
     <ul>
         <% isoFiles.forEach(isoFile => { %>
             <li>
